# BinaryMessage

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  main.cpp  message_definitions.json  sample_config.json
include/: BinaryMessage.hpp  BinaryMessageFactory.hpp  FieldConfig.hpp  MessageConfig.hpp
src/: BinaryMessage.cpp  BinaryMessageFactory.cpp  FieldConfig.cpp  MessageConfig.cpp
tests/: BinaryMessageFactoryTests.cpp  BinaryMessageTests.cpp  CMakeLists.txt  MessageConfigTests.cpp
